# catalytic-residue-prediction

./: .gitignore  LICENSE  PROJECT_NOTES.md  README.md  pyproject.toml
results/: EXPERIMENT_SUMMARY.md  experiments.csv  project_experiments.csv
scripts/: run_experiments.py
src/: cli.py
src/data/: __init__.py  labeling.py  load.py  splits.py  validate.py
src/evaluation/: experiment_log.py  metrics.py
src/features/: amino_acids.py  embeddings.py  windows.py
src/models/: baseline.py  embedding_baseline.py  logistic.py  squidly_like.py
tests/: test_data_pipeline.py  test_embeddings.py  test_experiment_log.py  test_metrics.py  test_squidly_like.py
