[project]
name = "catalytic-residue-prediction"
version = "0.1.0"
description = "Predict catalytic residues in protein sequences."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.0",
    "scikit-learn>=1.5",
    "tqdm>=4.66",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
embeddings = [
    "torch>=2.2",
    "transformers>=4.40",
]

[project.scripts]
crp = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["cli"]
